<resources>
    <string name="app_name">Androind Assignments1</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="LoginButton">Login</string>
    <string name="dialog_message">dialog</string>
    <string name="dialog_title">diaglog2</string>
    <string name="ok">ok1</string>
    <string name="cancel">cancel1</string>
    <string name="button">Start chat</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="action_about">About</string>
    <string name="tool_dialog_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>


</resources>