<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2"
    >

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/radiobutton" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/checkbox" />

    <Switch
        android:id="@+id/switch11"
        android:layout_width="190dp"
        android:layout_height="43dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/what_does_this_do" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>